Lab/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmtList RC

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: Exp SEMI
   28     | CompSt
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt

   33 DefList: Def DefList
   34        | %empty

   35 Def: Specifier DecList SEMI
   36    | error

   37 DecList: Dec
   38        | Dec COMMA DecList

   39 Dec: VarDec
   40    | VarDec ASSIGNOP Exp

   41 Exp: Exp ASSIGNOP Exp
   42    | Exp AND Exp
   43    | Exp OR Exp
   44    | Exp RELOP Exp
   45    | Exp PLUS Exp
   46    | Exp MINUS Exp
   47    | Exp STAR Exp
   48    | Exp DIV Exp
   49    | LP Exp RP
   50    | MINUS Exp
   51    | NOT Exp
   52    | ID LP Args RP
   53    | ID LP RP
   54    | Exp LB Exp RB
   55    | Exp DOT ID
   56    | ID
   57    | INT
   58    | FLOAT

   59 Args: Exp COMMA Args
   60     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 36
    SEMI <type_ast> (258) 4 5 27 29 35
    COMMA <type_ast> (259) 9 21 38 59
    LC <type_ast> (260) 12 24
    RC <type_ast> (261) 12 24
    TYPE <type_ast> (262) 10
    ID <type_ast> (263) 14 16 17 19 20 52 53 55 56
    INT <type_ast> (264) 18 57
    FLOAT <type_ast> (265) 58
    IF <type_ast> (266) 30 31
    WHILE <type_ast> (267) 32
    STRUCT <type_ast> (268) 12 13
    RETURN <type_ast> (269) 29
    ASSIGNOP <type_ast> (270) 40 41
    OR <type_ast> (271) 43
    AND <type_ast> (272) 42
    RELOP <type_ast> (273) 44
    PLUS <type_ast> (274) 45
    MINUS <type_ast> (275) 46 50
    STAR <type_ast> (276) 47
    DIV <type_ast> (277) 48
    NOT <type_ast> (278) 51
    UNARY_MINUS <type_ast> (279)
    DOT <type_ast> (280) 55
    LP <type_ast> (281) 19 20 30 31 32 49 52 53
    RP <type_ast> (282) 19 20 30 31 32 49 52 53
    LB <type_ast> (283) 18 54
    RB <type_ast> (284) 18 54
    LOWER_THAN_ELSE <type_ast> (285)
    ELSE <type_ast> (286) 31


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <type_ast> (33)
        on left: 1
        on right: 0
    ExtDefList <type_ast> (34)
        on left: 2 3
        on right: 1 2
    ExtDef <type_ast> (35)
        on left: 4 5 6 7
        on right: 2
    ExtDecList <type_ast> (36)
        on left: 8 9
        on right: 4 9
    Specifier <type_ast> (37)
        on left: 10 11
        on right: 4 5 6 23 35
    StructSpecifier <type_ast> (38)
        on left: 12 13
        on right: 11
    OptTag <type_ast> (39)
        on left: 14 15
        on right: 12
    Tag <type_ast> (40)
        on left: 16
        on right: 13
    VarDec <type_ast> (41)
        on left: 17 18
        on right: 8 9 18 23 39 40
    FunDec <type_ast> (42)
        on left: 19 20
        on right: 6
    VarList <type_ast> (43)
        on left: 21 22
        on right: 19 21
    ParamDec <type_ast> (44)
        on left: 23
        on right: 21 22
    CompSt <type_ast> (45)
        on left: 24
        on right: 6 28
    StmtList <type_ast> (46)
        on left: 25 26
        on right: 24 25
    Stmt <type_ast> (47)
        on left: 27 28 29 30 31 32
        on right: 25 30 31 32
    DefList <type_ast> (48)
        on left: 33 34
        on right: 12 24 33
    Def <type_ast> (49)
        on left: 35 36
        on right: 33
    DecList <type_ast> (50)
        on left: 37 38
        on right: 35 38
    Dec <type_ast> (51)
        on left: 39 40
        on right: 37 38
    Exp <type_ast> (52)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
        on right: 27 29 30 31 32 40 41 42 43 44 45 46 47 48 49 50 51 54 55 59 60
    Args <type_ast> (53)
        on left: 59 60
        on right: 52 59


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error •

    $default  reduce using rule 7 (ExtDef)


State 2

   10 Specifier: TYPE •

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT • OptTag LC DefList RC
   13                | STRUCT • Tag

    ID  shift, and go to state 9

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 12


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt

    SEMI  shift, and go to state 14
    ID    shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 8

   11 Specifier: StructSpecifier •

    $default  reduce using rule 11 (Specifier)


State 9

   14 OptTag: ID •
   16 Tag: ID •

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 10

   12 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 19


State 11

   13 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 13 (StructSpecifier)


State 12

    0 $accept: Program $end •

    $default  accept


State 13

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 14

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 15

   17 VarDec: ID •
   19 FunDec: ID • LP VarList RP
   20       | ID • LP RP

    LP  shift, and go to state 20

    $default  reduce using rule 17 (VarDec)


State 16

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 21


State 17

    8 ExtDecList: VarDec •
    9           | VarDec • COMMA ExtDecList
   18 VarDec: VarDec • LB INT RB

    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec • CompSt

    LC  shift, and go to state 24

    CompSt  go to state 25


State 19

   12 StructSpecifier: STRUCT OptTag LC • DefList RC

    error   shift, and go to state 26
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 34 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 28
    Def              go to state 29


State 20

   19 FunDec: ID LP • VarList RP
   20       | ID LP • RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 30

    Specifier        go to state 31
    StructSpecifier  go to state 8
    VarList          go to state 32
    ParamDec         go to state 33


State 21

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 22

    9 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 35
    VarDec      go to state 17


State 23

   18 VarDec: VarDec LB • INT RB

    INT  shift, and go to state 36


State 24

   24 CompSt: LC • DefList StmtList RC

    error   shift, and go to state 26
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    LC      reduce using rule 34 (DefList)
    RC      reduce using rule 34 (DefList)
    ID      reduce using rule 34 (DefList)
    INT     reduce using rule 34 (DefList)
    FLOAT   reduce using rule 34 (DefList)
    IF      reduce using rule 34 (DefList)
    WHILE   reduce using rule 34 (DefList)
    RETURN  reduce using rule 34 (DefList)
    MINUS   reduce using rule 34 (DefList)
    NOT     reduce using rule 34 (DefList)
    LP      reduce using rule 34 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 37
    Def              go to state 29


State 25

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 26

   36 Def: error •

    $default  reduce using rule 36 (Def)


State 27

   35 Def: Specifier • DecList SEMI

    ID  shift, and go to state 34

    VarDec   go to state 38
    DecList  go to state 39
    Dec      go to state 40


State 28

   12 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 41


State 29

   33 DefList: Def • DefList

    error   shift, and go to state 26
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    LC      reduce using rule 34 (DefList)
    RC      reduce using rule 34 (DefList)
    ID      reduce using rule 34 (DefList)
    INT     reduce using rule 34 (DefList)
    FLOAT   reduce using rule 34 (DefList)
    IF      reduce using rule 34 (DefList)
    WHILE   reduce using rule 34 (DefList)
    RETURN  reduce using rule 34 (DefList)
    MINUS   reduce using rule 34 (DefList)
    NOT     reduce using rule 34 (DefList)
    LP      reduce using rule 34 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 29


State 30

   20 FunDec: ID LP RP •

    $default  reduce using rule 20 (FunDec)


State 31

   23 ParamDec: Specifier • VarDec

    ID  shift, and go to state 34

    VarDec  go to state 43


State 32

   19 FunDec: ID LP VarList • RP

    RP  shift, and go to state 44


State 33

   21 VarList: ParamDec • COMMA VarList
   22        | ParamDec •

    COMMA  shift, and go to state 45

    $default  reduce using rule 22 (VarList)


State 34

   17 VarDec: ID •

    $default  reduce using rule 17 (VarDec)


State 35

    9 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 9 (ExtDecList)


State 36

   18 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 46


State 37

   24 CompSt: LC DefList • StmtList RC

    LC      shift, and go to state 24
    ID      shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    IF      shift, and go to state 50
    WHILE   shift, and go to state 51
    RETURN  shift, and go to state 52
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55

    $default  reduce using rule 26 (StmtList)

    CompSt    go to state 56
    StmtList  go to state 57
    Stmt      go to state 58
    Exp       go to state 59


State 38

   18 VarDec: VarDec • LB INT RB
   39 Dec: VarDec •
   40    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 60
    LB        shift, and go to state 23

    $default  reduce using rule 39 (Dec)


State 39

   35 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 61


State 40

   37 DecList: Dec •
   38        | Dec • COMMA DecList

    COMMA  shift, and go to state 62

    $default  reduce using rule 37 (DecList)


State 41

   12 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 12 (StructSpecifier)


State 42

   33 DefList: Def DefList •

    $default  reduce using rule 33 (DefList)


State 43

   18 VarDec: VarDec • LB INT RB
   23 ParamDec: Specifier VarDec •

    LB  shift, and go to state 23

    $default  reduce using rule 23 (ParamDec)


State 44

   19 FunDec: ID LP VarList RP •

    $default  reduce using rule 19 (FunDec)


State 45

   21 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 31
    StructSpecifier  go to state 8
    VarList          go to state 63
    ParamDec         go to state 33


State 46

   18 VarDec: VarDec LB INT RB •

    $default  reduce using rule 18 (VarDec)


State 47

   52 Exp: ID • LP Args RP
   53    | ID • LP RP
   56    | ID •

    LP  shift, and go to state 64

    $default  reduce using rule 56 (Exp)


State 48

   57 Exp: INT •

    $default  reduce using rule 57 (Exp)


State 49

   58 Exp: FLOAT •

    $default  reduce using rule 58 (Exp)


State 50

   30 Stmt: IF • LP Exp RP Stmt
   31     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 65


State 51

   32 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 66


State 52

   29 Stmt: RETURN • Exp SEMI

    ID     shift, and go to state 47
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 67


State 53

   50 Exp: MINUS • Exp

    ID     shift, and go to state 47
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 68


State 54

   51 Exp: NOT • Exp

    ID     shift, and go to state 47
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 69


State 55

   49 Exp: LP • Exp RP

    ID     shift, and go to state 47
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 70


State 56

   28 Stmt: CompSt •

    $default  reduce using rule 28 (Stmt)


State 57

   24 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 71


State 58

   25 StmtList: Stmt • StmtList

    LC      shift, and go to state 24
    ID      shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    IF      shift, and go to state 50
    WHILE   shift, and go to state 51
    RETURN  shift, and go to state 52
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55

    $default  reduce using rule 26 (StmtList)

    CompSt    go to state 56
    StmtList  go to state 72
    Stmt      go to state 58
    Exp       go to state 59


State 59

   27 Stmt: Exp • SEMI
   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    SEMI      shift, and go to state 73
    ASSIGNOP  shift, and go to state 74
    OR        shift, and go to state 75
    AND       shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    DOT       shift, and go to state 82
    LB        shift, and go to state 83


State 60

   40 Dec: VarDec ASSIGNOP • Exp

    ID     shift, and go to state 47
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 84


State 61

   35 Def: Specifier DecList SEMI •

    $default  reduce using rule 35 (Def)


State 62

   38 DecList: Dec COMMA • DecList

    ID  shift, and go to state 34

    VarDec   go to state 38
    DecList  go to state 85
    Dec      go to state 40


State 63

   21 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 21 (VarList)


State 64

   52 Exp: ID LP • Args RP
   53    | ID LP • RP

    ID     shift, and go to state 47
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    RP     shift, and go to state 86

    Exp   go to state 87
    Args  go to state 88


State 65

   30 Stmt: IF LP • Exp RP Stmt
   31     | IF LP • Exp RP Stmt ELSE Stmt

    ID     shift, and go to state 47
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 89


State 66

   32 Stmt: WHILE LP • Exp RP Stmt

    ID     shift, and go to state 47
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 90


State 67

   29 Stmt: RETURN Exp • SEMI
   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    SEMI      shift, and go to state 91
    ASSIGNOP  shift, and go to state 74
    OR        shift, and go to state 75
    AND       shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    DOT       shift, and go to state 82
    LB        shift, and go to state 83


State 68

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   50    | MINUS Exp •
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    DOT  shift, and go to state 82
    LB   shift, and go to state 83

    $default  reduce using rule 50 (Exp)


State 69

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   51    | NOT Exp •
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    DOT  shift, and go to state 82
    LB   shift, and go to state 83

    $default  reduce using rule 51 (Exp)


State 70

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   49    | LP Exp • RP
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    ASSIGNOP  shift, and go to state 74
    OR        shift, and go to state 75
    AND       shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    DOT       shift, and go to state 82
    RP        shift, and go to state 92
    LB        shift, and go to state 83


State 71

   24 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 24 (CompSt)


State 72

   25 StmtList: Stmt StmtList •

    $default  reduce using rule 25 (StmtList)


State 73

   27 Stmt: Exp SEMI •

    $default  reduce using rule 27 (Stmt)


State 74

   41 Exp: Exp ASSIGNOP • Exp

    ID     shift, and go to state 47
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 93


State 75

   43 Exp: Exp OR • Exp

    ID     shift, and go to state 47
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 94


State 76

   42 Exp: Exp AND • Exp

    ID     shift, and go to state 47
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 95


State 77

   44 Exp: Exp RELOP • Exp

    ID     shift, and go to state 47
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 96


State 78

   45 Exp: Exp PLUS • Exp

    ID     shift, and go to state 47
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 97


State 79

   46 Exp: Exp MINUS • Exp

    ID     shift, and go to state 47
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 98


State 80

   47 Exp: Exp STAR • Exp

    ID     shift, and go to state 47
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 99


State 81

   48 Exp: Exp DIV • Exp
